<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group>
        <item
            android:id="@+id/logout"
            android:orderInCategory="80"
            android:title="@string/log_out"
            app:showAsAction="never" />
        <item
            android:id="@+id/settings"
            android:orderInCategory="100"
            android:title="@string/settings"
            app:showAsAction="never" />
    </group>
    <group
        android:id="@+id/friendss"
        android:orderInCategory="0" >
        <item
            android:id="@+id/nav_friends"
            android:icon="@drawable/contacts_icon_48"
            android:title="@string/friends" />
        <item android:title="@string/add_friend"
            android:id="@+id/add_friend"
            android:icon="@drawable/add_icon_64" />
    </group>
    <group
        android:id="@+id/groupss"
        android:orderInCategory="10" >
        <item
            android:id="@+id/nav_groups"
            android:icon="@drawable/people_icon_48"
            android:title="@string/groups"
            android:checkable="false"/>
        <item
            android:icon="@drawable/add_icon_64"
            android:id="@+id/add_group"
            android:title="@string/add_group"
            android:orderInCategory="20" />
    </group>
</menu>