<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/snackContainer">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="seacoalCo.bill_it.camera.ImageActivity">

        <android.support.v7.widget.Toolbar
            android:id="@+id/done_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@drawable/cellborder"
                android:padding="5dp"
                android:layout_weight="1.1"
                android:gravity="center"
                android:text="@string/quantity"
                android:textColor="@color/text_color" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@drawable/cellborder"
                android:gravity="center"
                android:padding="5dp"
                android:layout_weight="3"
                android:text="@string/description"
                android:textColor="@color/text_color" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@drawable/cellborder"
                android:padding="5dp"
                android:gravity="center"
                android:layout_weight="1.25"
                android:text="@string/unit_price"
                android:textColor="@color/text_color" />

        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="30">

        </android.support.v7.widget.RecyclerView>

    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
