<?xml version="1.0" encoding="utf-8"?>

<LinearLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:gravity="center"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/snackContainer"
    tools:context="e.tibod.ticketscannerv2.seacoalCo.bill_it.SplitActivity"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center_horizontal">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <android.support.v7.widget.Toolbar
                android:id="@+id/done_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                android:elevation="4dp"
                android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

            <LinearLayout
                android:layout_weight="35"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/buyer"
                    />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <seacoalCo.bill_it.custom_views.CircularTextView
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:layout_margin="8dp"
                        android:padding="8dp"
                        android:textSize="18sp"

                        android:text=""
                        android:gravity="center"
                        xmlns:android="http://schemas.android.com/apk/res/android"
                        android:layout_gravity="center"/>

                    <com.yarolegovich.discretescrollview.DiscreteScrollView
                        android:id="@+id/buyer_rv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_gravity="center"/>
                </FrameLayout>

            </LinearLayout>

            <Space
                android:layout_width="1dp"
                android:id="@+id/space1"
                android:layout_height="30dp"/>

            <LinearLayout
                android:layout_weight="35"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/consumer"
                    />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <seacoalCo.bill_it.custom_views.CircularTextView
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:layout_margin="8dp"
                        android:padding="8dp"
                        android:textSize="18sp"
                        android:text=""
                        android:gravity="center"
                        xmlns:android="http://schemas.android.com/apk/res/android"
                        android:layout_gravity="center"/>

                    <com.yarolegovich.discretescrollview.DiscreteScrollView
                        android:id="@+id/consumer_rv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_gravity="center"/>
                </FrameLayout>

            </LinearLayout>

            <Space
                android:layout_width="1dp"
                android:id="@+id/space2"
                android:layout_height="30dp"/>

            <LinearLayout
                android:layout_weight="35"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="wrap_content"
                    android:text="@string/item"
                    />

                <com.yarolegovich.discretescrollview.DiscreteScrollView
                    android:id="@+id/item_rv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>


        </LinearLayout>
    </ScrollView>

</LinearLayout>

